templates/fdi-dotstatsuite-sfs-solr_template.yaml
---
# Source: fdi-dotstatsuite-sfs-solr/templates/svc/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: fdi-dotstatsuite-sfs-solr-mongo
  labels:
    helm.sh/chart: fdi-dotstatsuite-sfs-solr-1.0.1
    app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v14.0.0"
    app.kubernetes.io/managed-by: Helm-mongo
spec:
  ports:
  - name: mongodb
    port: 27017
    targetPort: mongodb
  selector:
    app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
    app.kubernetes.io/instance: release-name-mongo
---
# Source: fdi-dotstatsuite-sfs-solr/templates/svc/sfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: fdi-dotstatsuite-sfs-solr-sfs
  labels:
    helm.sh/chart: fdi-dotstatsuite-sfs-solr-1.0.1
    app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v14.0.0"
    app.kubernetes.io/managed-by: Helm-sfs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: readiness-http
      protocol: TCP
      name: http-sfs
  selector:
    app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
    app.kubernetes.io/instance: release-name-sfs
---
# Source: fdi-dotstatsuite-sfs-solr/templates/svc/solr.yaml
apiVersion: v1
kind: Service
metadata:
  name: fdi-dotstatsuite-sfs-solr-solr
  labels:
    helm.sh/chart: fdi-dotstatsuite-sfs-solr-1.0.1
    app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v14.0.0"
    app.kubernetes.io/managed-by: Helm-solr
spec:
  type: ClusterIP
  ports:
    - port: 8983
      targetPort: http
      protocol: TCP
      name: http-solr
  selector:
    app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
    app.kubernetes.io/instance: release-name-solr
---
# Source: fdi-dotstatsuite-sfs-solr/templates/deploy/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdi-dotstatsuite-sfs-solr-mongo
  labels:
    helm.sh/chart: fdi-dotstatsuite-sfs-solr-1.0.1
    app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v14.0.0"
    app.kubernetes.io/managed-by: Helm-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
      app.kubernetes.io/instance: release-name-mongo
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
        app.kubernetes.io/instance: release-name-mongo
    spec:
      volumes:
      - name: fdi-dotstatsuite-sfs-solr-mongo-pv-storage
        persistentVolumeClaim:
           claimName: fdi-dotstatsuite-sfs-solr-mongo-pv-claim
      imagePullSecrets:
        - name: artifactory-prod
      serviceAccountName: fdi-dotstatsuite-sfs-solr-mongo
      terminationGracePeriodSeconds: 10 
      securityContext:
        {}
      containers:
        - name: fdi-dotstatsuite-sfs-solr-mongo
          securityContext:
            {}
          image: "artifactory.cloud.statcan.ca/docker/mongo:5.0.6"
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /data/db
            name: fdi-dotstatsuite-sfs-solr-mongo-pv-storage
          ports:
          - name: mongodb
            containerPort: 27017
---
# Source: fdi-dotstatsuite-sfs-solr/templates/deploy/sfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdi-dotstatsuite-sfs-solr-sfs
  labels:
    helm.sh/chart: fdi-dotstatsuite-sfs-solr-1.0.1
    app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v14.0.0"
    app.kubernetes.io/managed-by: Helm-sfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
      app.kubernetes.io/instance: release-name-sfs
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: "27017"
      labels:
        app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
        app.kubernetes.io/instance: release-name-sfs
    spec:
      imagePullSecrets:
        - name: artifactory-prod
      serviceAccountName: fdi-dotstatsuite-sfs-solr-sfs
      securityContext:
        {}
      containers:
        - name: fdi-dotstatsuite-sfs-solr-sfs
          securityContext:
            {}
          image: "siscc/dotstatsuite-sdmx-faceted-search:master"
          imagePullPolicy: Always
          ports:
            - name: readiness-http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: readiness-http
---
# Source: fdi-dotstatsuite-sfs-solr/templates/deploy/solr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fdi-dotstatsuite-sfs-solr-solr
  labels:
    helm.sh/chart: fdi-dotstatsuite-sfs-solr-1.0.1
    app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v14.0.0"
    app.kubernetes.io/managed-by: Helm-solr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
      app.kubernetes.io/instance: release-name-solr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
        app.kubernetes.io/instance: release-name-solr
    spec:
      volumes:
      - name: fdi-dotstatsuite-sfs-solr-solr-pv-storage
        persistentVolumeClaim:
           claimName: fdi-dotstatsuite-sfs-solr-solr-pv-claim
      imagePullSecrets:
        - name: registry-pull-secret
      serviceAccountName: fdi-dotstatsuite-sfs-solr-solr
      securityContext:
        {}
      containers:
        - name: fdi-dotstatsuite-sfs-solr-solr
          securityContext:
            {}
          image: "solr:8.11.1"
          imagePullPolicy: Always
          args: ["-c"]
          volumeMounts:
          - mountPath: /var/solr
            name: fdi-dotstatsuite-sfs-solr-solr-pv-storage
          ports:
            - name: http
              containerPort: 8983
              protocol: TCP
---
# Source: fdi-dotstatsuite-sfs-solr/templates/ing/sfs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdi-dotstatsuite-sfs-solr-sfs
  labels:
    helm.sh/chart: fdi-dotstatsuite-sfs-solr-1.0.1
    app.kubernetes.io/name: fdi-dotstatsuite-sfs-solr
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v14.0.0"
    app.kubernetes.io/managed-by: Helm-sfs
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "sdmx-sfs.dev.cloud.statcan.ca"
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: fdi-dotstatsuite-sfs-solr-sfs
                port:
                  number: 80
